# weaviate-python-client

./: .codecov.yml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  LICENSE.md  README.rst  README_releases.md  RELEASING.md  conftest.py  developement-requirements.txt  docker-compose.yml  int-test.sh  license.md  prototype_near_image.py  publishing.md  pyproject.toml  pyrightconfig.json  pytest.ini  readme.md  requirements-devel.txt  requirements-mypy.txt  requirements-test.txt  requirements.txt  ruff.toml  run-mypy.sh  setup.cfg  setup.py  test.sh  travis.yaml  unit-test.sh
.github/: dependabot.yml
Integration_test/: client_functions.py
ci/: compose.sh  docker-compose-async.yml  docker-compose-azure.yml  docker-compose-backup.yml  docker-compose-backups.yml  docker-compose-cluster.yml  docker-compose-generative.yml  docker-compose-modules.yml  docker-compose-multimodal.yml  docker-compose-namespaces.yml  docker-compose-okta-cc.yml  docker-compose-okta-users.yml  docker-compose-okta.yml  docker-compose-openai.yml  docker-compose-proxy.yml  docker-compose-rbac.yml  docker-compose-rerank.yml  docker-compose-wcs.yml  docker-compose.yml  docker-compose_openai.yml  docker-compose_test.yml  docker_compose_wcs_auth.txt  generate_doc.bash  integration_test.py  people_schema.json  queries.py  sk8.ttl  sk8_pred.ttl  start_weaviate.bash  start_weaviate.sh  start_weaviate_jt.sh  stop_weaviate.sh
docs/: PUBLISHING.md  README.rst  changelog.rst  conf.py  index.html  index.rst  modules.rst  requirements.txt  weaviate.auth.rst  weaviate.backup.rst  weaviate.batch.rst  weaviate.classes.rst  weaviate.classification.rst  weaviate.client.rst  weaviate.cluster.rst  weaviate.collections.aggregations.rst  weaviate.collections.backups.rst  weaviate.collections.batch.rst  weaviate.collections.classes.rst  weaviate.collections.cluster.rst  weaviate.collections.collection.rst  weaviate.collections.collections.rst  weaviate.collections.config.rst  weaviate.collections.data.rst  weaviate.collections.grpc.rst  weaviate.collections.queries.bm25.rst  weaviate.collections.queries.fetch_object_by_id.rst  weaviate.collections.queries.fetch_objects.rst  weaviate.collections.queries.fetch_objects_by_ids.rst  weaviate.collections.queries.hybrid.rst  weaviate.collections.queries.near_image.rst  weaviate.collections.queries.near_media.rst  weaviate.collections.queries.near_object.rst  weaviate.collections.queries.near_text.rst  weaviate.collections.queries.near_vector.rst  weaviate.collections.queries.rst  weaviate.collections.rst  weaviate.collections.tenants.rst  weaviate.connect.rst  weaviate.contextionary.rst  (+17 more)
integration/: 1234.3gp  backup.py  classification.py  client_functions.py  conftest.py  crud.py  graphql.py  integration_util.py  misc.py  people_schema.json  pip_package.py  queries.py  rdf.py  test_alias.py  test_auth.py  test_authentication.py  test_backup.py  test_backup_v4.py  test_batch.py  test_batch_stream.py  test_batch_v4.py  test_classification.py  test_client.py  test_client_debug.py  test_client_logging.py  test_cluster.py  test_collection.py  test_collection_aggregate.py  test_collection_async.py  test_collection_batch.py  test_collection_batch_delete.py  test_collection_blobs.py  test_collection_boost.py  test_collection_colbert.py  test_collection_config.py  test_collection_cuvs.py  test_collection_diversity.py  test_collection_diversity_hybrid.py  test_collection_filter.py  test_collection_geo.py  (+37 more)
integration_embedded/: test_client.py
integration_mock/: conftest.py  test_automatic_retries.py
integration_v3/: people_schema.json  test_authentication.py  test_backup.py  test_backup_v4.py  test_batch.py  test_cluster.py  test_graphql.py  test_grcp.py  test_schema.py
journey_tests/: journeys.py  run.sh  test_fastapi.py  test_flask.py  test_litestar.py
mock_tests/: conftest.py  mock_data.py  test_auth.py  test_automatic_retries.py  test_batch.py  test_batching_manual.py  test_collection.py  test_connect.py  test_connection.py  test_debug.py  test_exception.py  test_graphql.py  test_grpc_config.py  test_namespaces.py  test_property_reindex.py  test_resend.py  test_schema.py  test_ssl.py  test_tenants_get.py  test_timeouts.py  test_users.py
profiling/: conftest.py  constants.py  httpx.py  pyspy.py  test_batch.py  test_import_and_query.py  test_profiling.py  test_refs.py  test_shutdown.py  test_sift.py  test_sphere.py  test_sphere_mt.py  test_stream.py
proto_test/: test_proto.py
test/: README.md  __init__.py  add_action.py  add_action_batch.py  add_reference.py  add_reference_batch.py  add_thing.py  add_thing_batch.py  auth.py  c11y.py  classification.py  client.py  delete.py  delete_thing.py  exceptions.py  gql.py  is_reachable.py  manual.py  patch_entity.py  patch_thing.py  query.py  read_delete_entity.py  schema.py  schema_company.json  test_auth.py  test_batch_async.py  test_client.py  test_connection_params.py  test_embedded.py  test_exceptions.py  test_get_vector_v4.py  test_imports.py  test_namespaces.py  test_parse_version_string.py  test_rbac.py  test_schema.py  test_server_version.py  test_str_enum.py  test_timeout.py  test_timeout_config.py  (+8 more)
tools/: proto_regen.sh  stubs.py  stubs.yaml  stubs_regen.sh
weaviate/: __init__.py  _authlib_compat.py  _client_c11y.py  _client_create_update_entity.py  _client_crud_reference.py  _client_read_delete_entity.py  _client_schema.py  asyncify.py  auth.py  batch.py  classes.py  classify.py  client.py  client.pyi  client_base.py  client_config.py  client_executor.py  config.py  configuration.py  conftest.py  embedded.py  error_msgs.py  event_loop.py  exceptions.py  gql.py  integrations.py  logger.py  options.py  retry.py  str_enum.py  syncify.py  test_weaviate.py  types.py  util.py  validate_schema.py  validator.py  version.py  warnings.py  weaviate.py  weaviate_classes.py  (+1 more)
weaviate_grpc/: base_pb2.py  batch_pb2.py  batch_pb2.pyi  regen.sh  search_get_pb2.py  search_get_v1_pb2.py  search_get_v1_pb2.pyi  weaviate_pb2.py  weaviate_pb2.pyi  weaviate_pb2_grpc.py
(+1414 files in other folders)
