[build-system]
requires = [
    "setuptools >= 65",
    "setuptools_scm[toml] >6.2",
    "wheel >= 0.38.1",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.github
  | \.pytest_cache
  | \.venv
  | \venv
  | build
  | dist
  | docs
)/
'''

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["weaviate/proto", "docs", "integration_v3"]

[[tool.mypy.overrides]]
module = "weaviate.proto.v1.*"
ignore_errors = true