[metadata]
name = weaviate-client
description = A python native weaviate client
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/weaviate/weaviate-python-client
author = SeMI Technologies
author_email = hello@weaviate.io,
license_files = LICENSE.md
project_urls =
    Documentation = https://weaviate-python-client.readthedocs.io
    Source = https://github.com/weaviate/weaviate-python-client
    Tracker = https://github.com/weaviate/weaviate-python-client/issues
dynamic = ["version"]

[options]
zip_safe = False
packages =
    weaviate
    weaviate.connect
    weaviate.schema
    weaviate.schema.properties
    weaviate.batch
    weaviate.backup
    weaviate.classification
    weaviate.contextionary
    weaviate.data
    weaviate.data.references
    weaviate.data.replication
    weaviate.gql
    weaviate.cluster
    weaviate_grpc

platforms = any
include_package_data = True
install_requires =
    requests>=2.28.0,<2.29.0
    validators>=0.18.2,<=0.21.0
    tqdm>=4.59.0,<5.0.0
    authlib>=1.1.0
python_requires = >=3.8

[options.extras_require]
GRPC =
    grpcio
    grpcio-tools



[options.package_data]
# If any package or subpackage contains *.txt, *.rst or *.md files, include them:
*: ["*.txt", "*.rst", "*.md"],
