[metadata]
name = weaviate-client
description = A python native Weaviate client
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/weaviate/weaviate-python-client
author = Weaviate
author_email = hello@weaviate.io,
license_files = LICENSE
license = BSD 3-clause
project_urls =
    Documentation = https://weaviate-python-client.readthedocs.io
    Source = https://github.com/weaviate/weaviate-python-client
    Tracker = https://github.com/weaviate/weaviate-python-client/issues
dynamic = ["version"]

[options]
zip_safe = False
packages =
    weaviate
    weaviate.connect
    weaviate.collections
    weaviate.schema
    weaviate.schema.properties
    weaviate.batch
    weaviate.backup
    weaviate.classification
    weaviate.contextionary
    weaviate.data
    weaviate.data.references
    weaviate.data.replication
    weaviate.gql
    weaviate.cluster
    weaviate.proto
    weaviate.proto.v1

platforms = any
include_package_data = True
install_requires =
    deprecated>=1.2.14,<2.0.0
    requests>=2.30.0,<3.0.0
    validators>=0.21.2,<1.0.0
    authlib>=1.2.1,<2.0.0
    pydantic>=2.1.1,<3.0.0
    httpx>=0.25.2,<1.0.0
    grpcio>=1.57.0,<2.0.0
    grpcio-tools>=1.57.0,<2.0.0
    grpcio-health-checking>=1.57.0,<2.0.0
python_requires = >=3.8


[options.package_data]
# If any package or subpackage contains *.txt, *.rst or *.md files, include them:
*: ["*.txt", "*.rst", "*.md", LICENSE],
