[metadata]
name = weaviate-client
description = A python native Weaviate client
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/weaviate/weaviate-python-client
author = Weaviate
author_email = hello@weaviate.io,
license_files = LICENSE
license = BSD 3-clause
project_urls =
    Documentation = https://weaviate-python-client.readthedocs.io
    Source = https://github.com/weaviate/weaviate-python-client
    Tracker = https://github.com/weaviate/weaviate-python-client/issues
dynamic = ["version"]

[options]
zip_safe = False
packages =
    weaviate
    weaviate.backup
    weaviate.cluster
    weaviate.collections
    weaviate.connect
    weaviate.gql
    weaviate.outputs
    weaviate.proto
    weaviate.proto.v1
    weaviate.rbac

platforms = any
include_package_data = True
install_requires =
    httpx>=0.26.0,<0.28.0
    validators==0.34.0
    authlib>=1.2.1,<1.3.2
    pydantic>=2.8.0,<3.0.0
    grpcio>=1.66.2,<2.0.0
    grpcio-tools>=1.66.2,<2.0.0
    grpcio-health-checking>=1.66.2,<2.0.0
python_requires = >=3.9


[options.package_data]
# If any package or subpackage contains *.txt, *.rst or *.md files, include them:
*: ["*.txt", "*.rst", "*.md", LICENSE],
